[project]
name = "vlake"
version = "0.1.0"
description = "Security datasets published as a frozen DuckLake on S3-compatible storage"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "pyarrow>=25.0.0",
    "boto3>=1.43.45",
    "httpx>=0.28.1",
    "click>=8.4.2",
]

[project.scripts]
vlake = "vlake.cli:main"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"
