[project]
name = "vlake"
version = "0.1.0"
description = "Security datasets published as a frozen DuckLake on S3-compatible storage"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14.6"
dependencies = [
    "duckdb>=1.5.4",
    "pyarrow>=25.0.0",
    "boto3>=1.43.46",
    "httpx>=0.28.1",
    "click>=8.4.2",
    "cvss>=3.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
vlake = "vlake.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "zizmor>=1.26.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",  # デフォルト (pycodestyle/pyflakes)
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (SAST)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # pytest では assert が正当
